New section styles (#58)
* Initial style prep

* Rough approximation of lines:

* More style tweaks

* Semi-ported security and parameters

* Converted first half of request

* Finished refactoring operations code

* Bug fix

* Cleanup

--- a/examples/docusaurus/mistral/docs/api/tag/fim.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fim.mdx
@@ -15,15 +15,15 @@ _Fim Completion_
 
 FIM completion.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Request Body \{#operation-fim_completion_v1_fim_completions_post+request\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -123,39 +123,39 @@ _Default Value:_ `1`
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 ### Responses \{#operation-fim_completion_v1_fim_completions_post+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-fim_completion_v1_fim_completions_post+200+application-json">
+<SectionTab slot="tab" id="operation-fim_completion_v1_fim_completions_post+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-fim_completion_v1_fim_completions_post+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-fim_completion_v1_fim_completions_post+responses+200+application-json">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice\">ChatCompletionChoice</a>","children":[{"label":"ChatCompletionChoice","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+ChatCompletionChoice\">ChatCompletionChoice</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+ChatCompletionChoice\">ChatCompletionChoice</a>","children":[{"label":"ChatCompletionChoice","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+ChatCompletionChoice\">ChatCompletionChoice</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### choices \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices\}
+##### choices \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ChatCompletionChoice \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices\}
+#### ChatCompletionChoice \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"stop\"","linkedLabel":"\"stop\"","children":[],"breakoutSubTypes":{}},{"label":"\"length\"","linkedLabel":"\"length\"","children":[],"breakoutSubTypes":{}},{"label":"\"model_length\"","linkedLabel":"\"model_length\"","children":[],"breakoutSubTypes":{}},{"label":"\"error\"","linkedLabel":"\"error\"","children":[],"breakoutSubTypes":{}},{"label":"\"tool_calls\"","linkedLabel":"\"tool_calls\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### finish_reason \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+finish_reason\}
+##### finish_reason \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+finish_reason\}
 
 </Property>
 
@@ -167,7 +167,7 @@ stop
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### index \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+index\}
+##### index \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+index\}
 
 </Property>
 
@@ -177,47 +177,47 @@ _Example:_
 0
 ```
 
-<Property typeInfo={{"label":"AssistantMessage","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+AssistantMessage\">AssistantMessage</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"AssistantMessage","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+AssistantMessage\">AssistantMessage</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### message \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### AssistantMessage \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+TextChunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ImageURLChunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+DocumentURLChunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ReferenceChunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
-
-##### content \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+##### message \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### TextChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+#### AssistantMessage \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
+
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"TextChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+TextChunk\">TextChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ImageURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ImageURLChunk\">ImageURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"DocumentURLChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+DocumentURLChunk\">DocumentURLChunk</a>","children":[],"breakoutSubTypes":{}},{"label":"ReferenceChunk","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ReferenceChunk\">ReferenceChunk</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+##### content \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" variant="default">
+
+#### TextChunk \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+
+</SectionTitle>
+
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### text \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+TextChunk+text\}
+##### text \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+TextChunk+text\}
 
 </Property>
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"text\"","linkedLabel":"\"text\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### type \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+TextChunk+type\}
+##### type \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+TextChunk+type\}
 
 </Property>
 
@@ -229,41 +229,41 @@ _Default Value:_ `"text"`
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ImageURLChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+#### ImageURLChunk \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ImageURL","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+ImageURL\">ImageURL</a>","children":[],"breakoutSubTypes":{}},{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ImageURL","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+ImageURL\">ImageURL</a>","children":[],"breakoutSubTypes":{}},{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### image_url \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url\}
+##### image_url \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ImageURL \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url\}
+#### ImageURL \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### detail \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url+ImageURL+detail\}
+##### detail \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url+ImageURL+detail\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### url \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url+ImageURL+url\}
+##### url \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+image_url+ImageURL+url\}
 
 </Property>
 
@@ -273,7 +273,7 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"image_url\"","linkedLabel":"\"image_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### type \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+type\}
+##### type \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ImageURLChunk+type\}
 
 </Property>
 
@@ -285,29 +285,29 @@ _Default Value:_ `"image_url"`
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### DocumentURLChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+#### DocumentURLChunk \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### document_name \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+DocumentURLChunk+document_name\}
+##### document_name \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+DocumentURLChunk+document_name\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### document_url \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+DocumentURLChunk+document_url\}
+##### document_url \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+DocumentURLChunk+document_url\}
 
 </Property>
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"document_url\"","linkedLabel":"\"document_url\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### type \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+DocumentURLChunk+type\}
+##### type \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+DocumentURLChunk+type\}
 
 </Property>
 
@@ -319,23 +319,23 @@ _Default Value:_ `"document_url"`
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ReferenceChunk \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
+#### ReferenceChunk \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"array","linkedLabel":"integer","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### reference_ids \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ReferenceChunk+reference_ids\}
+##### reference_ids \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ReferenceChunk+reference_ids\}
 
 </Property>
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"reference\"","linkedLabel":"\"reference\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### type \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ReferenceChunk+type\}
+##### type \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+content+ReferenceChunk+type\}
 
 </Property>
 
@@ -347,7 +347,7 @@ _Default Value:_ `"reference"`
 
 <Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### prefix \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+prefix\}
+##### prefix \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+prefix\}
 
 </Property>
 
@@ -357,53 +357,53 @@ _Default Value:_ `false`
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"assistant\"","linkedLabel":"\"assistant\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### role \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+role\}
+##### role \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+role\}
 
 </Property>
 
 _Default Value:_ `"assistant"`
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ToolCall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ToolCall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ToolCall\">ToolCall</a>","children":[{"label":"ToolCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+ToolCall\">ToolCall</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### tool_calls \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### ToolCall \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Property typeInfo={{"label":"FunctionCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+FunctionCall\">FunctionCall</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### function \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function\}
+##### tool_calls \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### FunctionCall \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function\}
+#### ToolCall \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
+
+<Property typeInfo={{"label":"FunctionCall","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+FunctionCall\">FunctionCall</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### function \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" variant="default">
+
+#### FunctionCall \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function\}
+
+</SectionTitle>
+
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"map","linkedLabel":"any","children":[{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}},{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### arguments \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function+FunctionCall+arguments\}
+##### arguments \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function+FunctionCall+arguments\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### name \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function+FunctionCall+name\}
+##### name \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+function+FunctionCall+name\}
 
 </Property>
 
@@ -413,7 +413,7 @@ _Default Value:_ `"assistant"`
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### id \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+id\}
+##### id \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+id\}
 
 </Property>
 
@@ -421,7 +421,7 @@ _Default Value:_ `"null"`
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### index \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+index\}
+##### index \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+index\}
 
 </Property>
 
@@ -429,7 +429,7 @@ _Default Value:_ `0`
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"function\"","linkedLabel":"\"function\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### type \{#operation-fim_completion_v1_fim_completions_post+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+type\}
+##### type \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+choices+ChatCompletionChoice+message+AssistantMessage+tool_calls+ToolCall+type\}
 
 </Property>
 
@@ -447,7 +447,7 @@ _Default Value:_ `0`
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### created \{#operation-fim_completion_v1_fim_completions_post+200+application-json+created\}
+##### created \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+created\}
 
 </Property>
 
@@ -459,7 +459,7 @@ _Example:_
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-fim_completion_v1_fim_completions_post+200+application-json+id\}
+##### id \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+id\}
 
 </Property>
 
@@ -471,7 +471,7 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### model \{#operation-fim_completion_v1_fim_completions_post+200+application-json+model\}
+##### model \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+model\}
 
 </Property>
 
@@ -483,7 +483,7 @@ codestral-latest
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-fim_completion_v1_fim_completions_post+200+application-json+object\}
+##### object \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+object\}
 
 </Property>
 
@@ -493,25 +493,25 @@ _Example:_
 chat.completion
 ```
 
-<Property typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+200+application-json+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### usage \{#operation-fim_completion_v1_fim_completions_post+200+application-json+usage\}
+##### usage \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+usage\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### UsageInfo \{#operation-fim_completion_v1_fim_completions_post+200+application-json+usage\}
+#### UsageInfo \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+usage\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### completion_tokens \{#operation-fim_completion_v1_fim_completions_post+200+application-json+usage+UsageInfo+completion_tokens\}
+##### completion_tokens \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+usage+UsageInfo+completion_tokens\}
 
 </Property>
 
@@ -523,7 +523,7 @@ _Example:_
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### prompt_tokens \{#operation-fim_completion_v1_fim_completions_post+200+application-json+usage+UsageInfo+prompt_tokens\}
+##### prompt_tokens \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+usage+UsageInfo+prompt_tokens\}
 
 </Property>
 
@@ -535,7 +535,7 @@ _Example:_
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### total_tokens \{#operation-fim_completion_v1_fim_completions_post+200+application-json+usage+UsageInfo+total_tokens\}
+##### total_tokens \{#operation-fim_completion_v1_fim_completions_post+responses+200+application-json+usage+UsageInfo+total_tokens\}
 
 </Property>
 
@@ -551,33 +551,33 @@ _Example:_
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-fim_completion_v1_fim_completions_post+422+application-json">
+<SectionTab slot="tab" id="operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json">
 
 422
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-fim_completion_v1_fim_completions_post+422+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json">
 
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### HttpMeta \{#operation-fim_completion_v1_fim_completions_post+422+application-json+HttpMeta\}
+##### HttpMeta \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+HttpMeta\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### Security \{#operation-fim_completion_v1_fim_completions_post+422+application-json+HttpMeta\}
+#### Security \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+HttpMeta\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### ApiKey \{#operation-fim_completion_v1_fim_completions_post+422+application-json+HttpMeta+Security+ApiKey\}
+##### ApiKey \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+HttpMeta+Security+ApiKey\}
 
 </Property>
 
@@ -585,37 +585,37 @@ _Example:_
 
 </ExpandableSection>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### detail \{#operation-fim_completion_v1_fim_completions_post+422+application-json+detail\}
+##### detail \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+detail\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ValidationError \{#operation-fim_completion_v1_fim_completions_post+422+application-json+detail\}
+#### ValidationError \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+detail\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### loc \{#operation-fim_completion_v1_fim_completions_post+422+application-json+detail+ValidationError+loc\}
+##### loc \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+detail+ValidationError+loc\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### msg \{#operation-fim_completion_v1_fim_completions_post+422+application-json+detail+ValidationError+msg\}
+##### msg \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+detail+ValidationError+msg\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### type \{#operation-fim_completion_v1_fim_completions_post+422+application-json+detail+ValidationError+type\}
+##### type \{#operation-fim_completion_v1_fim_completions_post+responses+200+422+application-json+detail+ValidationError+type\}
 
 </Property>
 
