--- a/examples/docusaurus/mistral/docs/api/tag/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/ocr.mdx
@@ -13,15 +13,15 @@ import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSectio
 
 OCR
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Request Body \{#operation-ocr_v1_ocr_post+request\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"ResponseFormat","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+ResponseFormat\">ResponseFormat</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -31,13 +31,13 @@ OCR
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### ResponseFormat \{#operation-ocr_v1_ocr_post+request+bbox_annotation_format\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+bbox_annotation_format+ResponseFormat+JsonSchema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -47,13 +47,13 @@ OCR
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### JsonSchema \{#operation-ocr_v1_ocr_post+request+bbox_annotation_format+ResponseFormat+json_schema\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -103,13 +103,13 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### DocumentURLChunk \{#operation-ocr_v1_ocr_post+request+document\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -137,13 +137,13 @@ _Default Value:_ `"document_url"`
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### ImageURLChunk \{#operation-ocr_v1_ocr_post+request+document\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/png;base64,iVBORw0`
 
@@ -155,13 +155,13 @@ An object that looks like `\{"type":"image_url","image_url":\{"url":"data:image/
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### ImageURL \{#operation-ocr_v1_ocr_post+request+document+ImageURLChunk+image_url\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -199,13 +199,13 @@ _Default Value:_ `"image_url"`
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### ResponseFormat \{#operation-ocr_v1_ocr_post+request+document_annotation_format\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"JsonSchema","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+request+document_annotation_format+ResponseFormat+JsonSchema\">JsonSchema</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -215,13 +215,13 @@ _Default Value:_ `"image_url"`
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 #### JsonSchema \{#operation-ocr_v1_ocr_post+request+document_annotation_format+ResponseFormat+json_schema\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
@@ -305,71 +305,71 @@ An object specifying the format that the model must output. Setting to `\{ "type
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 ### Responses \{#operation-ocr_v1_ocr_post+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-ocr_v1_ocr_post+200+application-json">
+<SectionTab slot="tab" id="operation-ocr_v1_ocr_post+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-ocr_v1_ocr_post+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-ocr_v1_ocr_post+responses+200+application-json">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### document_annotation \{#operation-ocr_v1_ocr_post+200+application-json+document_annotation\}
+##### document_annotation \{#operation-ocr_v1_ocr_post+responses+200+application-json+document_annotation\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### model \{#operation-ocr_v1_ocr_post+200+application-json+model\}
+##### model \{#operation-ocr_v1_ocr_post+responses+200+application-json+model\}
 
 </Property>
 
 The model used to generate the OCR.
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject\">OCRPageObject</a>","children":[{"label":"OCRPageObject","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+200+application-json+OCRPageObject\">OCRPageObject</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+application-json+OCRPageObject\">OCRPageObject</a>","children":[{"label":"OCRPageObject","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+application-json+OCRPageObject\">OCRPageObject</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### pages \{#operation-ocr_v1_ocr_post+200+application-json+pages\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### OCRPageObject \{#operation-ocr_v1_ocr_post+200+application-json+pages\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"OCRPageDimensions","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+OCRPageDimensions\">OCRPageDimensions</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### dimensions \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+dimensions\}
+##### pages \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### OCRPageDimensions \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+dimensions\}
+#### OCRPageObject \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
+
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"OCRPageDimensions","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+OCRPageDimensions\">OCRPageDimensions</a>","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### dimensions \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+dimensions\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" variant="default">
+
+#### OCRPageDimensions \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+dimensions\}
+
+</SectionTitle>
+
+<SectionContent slot="content" variant="default">
 
 The dimensions of the PDF Page's screenshot image
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### dpi \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+dimensions+OCRPageDimensions+dpi\}
+##### dpi \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+dimensions+OCRPageDimensions+dpi\}
 
 </Property>
 
@@ -377,7 +377,7 @@ Dots per inch of the page-image
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### height \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+dimensions+OCRPageDimensions+height\}
+##### height \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+dimensions+OCRPageDimensions+height\}
 
 </Property>
 
@@ -385,7 +385,7 @@ Height of the image in pixels
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### width \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+dimensions+OCRPageDimensions+width\}
+##### width \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+dimensions+OCRPageDimensions+width\}
 
 </Property>
 
@@ -395,37 +395,37 @@ Width of the image in pixels
 
 </ExpandableSection>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+OCRImageObject\">OCRImageObject</a>","children":[{"label":"OCRImageObject","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+OCRImageObject\">OCRImageObject</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+OCRImageObject\">OCRImageObject</a>","children":[{"label":"OCRImageObject","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+OCRImageObject\">OCRImageObject</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### images \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images\}
+##### images \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### OCRImageObject \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images\}
+#### OCRImageObject \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### bottom_right_x \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+bottom_right_x\}
+##### bottom_right_x \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+bottom_right_x\}
 
 </Property>
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### bottom_right_y \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+bottom_right_y\}
+##### bottom_right_y \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+bottom_right_y\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+id\}
+##### id \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+id\}
 
 </Property>
 
@@ -433,25 +433,25 @@ Image ID for extracted image in a page
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### image_annotation \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+image_annotation\}
+##### image_annotation \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+image_annotation\}
 
 </Property>
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### image_base64 \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+image_base64\}
+##### image_base64 \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+image_base64\}
 
 </Property>
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### top_left_x \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+top_left_x\}
+##### top_left_x \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+top_left_x\}
 
 </Property>
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### top_left_y \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+images+OCRImageObject+top_left_y\}
+##### top_left_y \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+images+OCRImageObject+top_left_y\}
 
 </Property>
 
@@ -461,7 +461,7 @@ Image ID for extracted image in a page
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### index \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+index\}
+##### index \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+index\}
 
 </Property>
 
@@ -469,7 +469,7 @@ The page index in a pdf document starting from 0
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### markdown \{#operation-ocr_v1_ocr_post+200+application-json+pages+OCRPageObject+markdown\}
+##### markdown \{#operation-ocr_v1_ocr_post+responses+200+application-json+pages+OCRPageObject+markdown\}
 
 </Property>
 
@@ -479,31 +479,31 @@ The markdown string response of the page
 
 </ExpandableSection>
 
-<Property typeInfo={{"label":"OCRUsageInfo","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+200+application-json+OCRUsageInfo\">OCRUsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"OCRUsageInfo","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+application-json+OCRUsageInfo\">OCRUsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### usage_info \{#operation-ocr_v1_ocr_post+200+application-json+usage_info\}
+##### usage_info \{#operation-ocr_v1_ocr_post+responses+200+application-json+usage_info\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### OCRUsageInfo \{#operation-ocr_v1_ocr_post+200+application-json+usage_info\}
+#### OCRUsageInfo \{#operation-ocr_v1_ocr_post+responses+200+application-json+usage_info\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### doc_size_bytes \{#operation-ocr_v1_ocr_post+200+application-json+usage_info+OCRUsageInfo+doc_size_bytes\}
+##### doc_size_bytes \{#operation-ocr_v1_ocr_post+responses+200+application-json+usage_info+OCRUsageInfo+doc_size_bytes\}
 
 </Property>
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### pages_processed \{#operation-ocr_v1_ocr_post+200+application-json+usage_info+OCRUsageInfo+pages_processed\}
+##### pages_processed \{#operation-ocr_v1_ocr_post+responses+200+application-json+usage_info+OCRUsageInfo+pages_processed\}
 
 </Property>
 
@@ -515,33 +515,33 @@ Number of pages processed
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-ocr_v1_ocr_post+422+application-json">
+<SectionTab slot="tab" id="operation-ocr_v1_ocr_post+responses+200+422+application-json">
 
 422
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-ocr_v1_ocr_post+422+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-ocr_v1_ocr_post+responses+200+422+application-json">
 
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### HttpMeta \{#operation-ocr_v1_ocr_post+422+application-json+HttpMeta\}
+##### HttpMeta \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+HttpMeta\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### Security \{#operation-ocr_v1_ocr_post+422+application-json+HttpMeta\}
+#### Security \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+HttpMeta\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### ApiKey \{#operation-ocr_v1_ocr_post+422+application-json+HttpMeta+Security+ApiKey\}
+##### ApiKey \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+HttpMeta+Security+ApiKey\}
 
 </Property>
 
@@ -549,37 +549,37 @@ Number of pages processed
 
 </ExpandableSection>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-ocr_v1_ocr_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### detail \{#operation-ocr_v1_ocr_post+422+application-json+detail\}
+##### detail \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+detail\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ValidationError \{#operation-ocr_v1_ocr_post+422+application-json+detail\}
+#### ValidationError \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+detail\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### loc \{#operation-ocr_v1_ocr_post+422+application-json+detail+ValidationError+loc\}
+##### loc \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+detail+ValidationError+loc\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### msg \{#operation-ocr_v1_ocr_post+422+application-json+detail+ValidationError+msg\}
+##### msg \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+detail+ValidationError+msg\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### type \{#operation-ocr_v1_ocr_post+422+application-json+detail+ValidationError+type\}
+##### type \{#operation-ocr_v1_ocr_post+responses+200+422+application-json+detail+ValidationError+type\}
 
 </Property>
 
