--- a/examples/docusaurus/mistral/src/components/speakeasy/embeds/inputs.mdx
+++ b/examples/docusaurus/mistral/src/components/speakeasy/embeds/inputs.mdx
@@ -3,89 +3,89 @@ import { Property, ExpandableSection, SectionTitle, SectionContent } from "@spea
 
 ### inputs
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### messages \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### inputs \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### messages \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+##### messages \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### inputs \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+#### inputs \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### messages \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+##### messages \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### inputs \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+#### inputs \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### messages \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+##### messages \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### inputs \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+#### inputs \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### messages \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+##### messages \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### inputs \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+#### inputs \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### messages \{#operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+##### messages \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+
+</Property>
+
+<ExpandableSection>
+
+<SectionTitle slot="title" variant="default">
+
+#### inputs \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
+
+</SectionTitle>
+
+<SectionContent slot="content" variant="default">
+
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[{"label":"inputs","linkedLabel":"<a href=\"#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+inputs\">inputs</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+##### messages \{#operation-moderations_v1_moderations_post+responses+operation-chat_moderations_v1_chat_moderations_post+responses+operation-classifications_v1_classifications_post+responses+operation-chat_classifications_v1_chat_classifications_post+request+inputs+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages+inputs+messages\}
 
 </Property>
 
