--- a/examples/docusaurus/petstore/docs/api/tag/machines.mdx
+++ b/examples/docusaurus/petstore/docs/api/tag/machines.mdx
@@ -4,7 +4,7 @@ sidebar_label: Machines
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Machines Operations \{#machines\}
@@ -15,183 +15,50 @@ _List machines_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Security \{#operation-api_v2_machine_list+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_list+security+properties\}
+### Security \{#operation-api_v2_machine_list-security\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_machine_list+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth \{#operation-api_v2_machine_list+security+basicAuth\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth \{#operation-api_v2_machine_list+security+SchemeBasicAuth\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_list+security+SchemeBasicAuth+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password \{#operation-api_v2_machine_list+security+SchemeBasicAuth+Password\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username \{#operation-api_v2_machine_list+security+SchemeBasicAuth+Username\}
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth \{#operation-api_v2_machine_list+security+cookieAuth\}
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
+<SectionTitle slot="title" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Parameters \{#operation-api_v2_machine_list+parameters\}
+### Parameters \{#operation-api_v2_machine_list-parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### limit \{#operation-api_v2_machine_list+parameters+limit\}
+<SectionContent slot="content" variant="top-level">
+
+##### limit \{#operation-api_v2_machine_list-parameters\}
 
 Number of results to return per page.
 
-<Section contentBorderVariant="all">
+<SectionContent slot="content" variant="top-level">
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_list+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_machine_list+parameters+Security\}
-
-</Property>
-
-Number of results to return per page.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-##### offset \{#operation-api_v2_machine_list+parameters+offset\}
+##### offset \{#operation-api_v2_machine_list-parameters\}
 
 The initial index from which to return the results.
 
-<Section contentBorderVariant="all">
+<SectionContent slot="content" variant="top-level">
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_list+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_machine_list+parameters+Security\}
-
-</Property>
-
-The initial index from which to return the results.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-##### q \{#operation-api_v2_machine_list+parameters+q\}
+##### q \{#operation-api_v2_machine_list-parameters\}
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_list+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_machine_list+parameters+Security\}
-
-</Property>
-
-> Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
-Case-insensitive query applied on the `name` property. 
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -199,7 +66,7 @@ Case-insensitive query applied on the `name` property.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="top-level">
 
 ### Response \{#operation-api_v2_machine_list+responses\}
 
@@ -211,19 +78,9 @@ Case-insensitive query applied on the `name` property.
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_list+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list+200+application-json">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_list+200+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### count \{#operation-api_v2_machine_list+200+application-json+count\}
 
@@ -235,11 +92,7 @@ _Example:_
 123
 ```
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### next \{#operation-api_v2_machine_list+200+application-json+next\}
 
@@ -251,11 +104,7 @@ _Example:_
 http://api.example.org/accounts/?offset=400&limit=100
 ```
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### previous \{#operation-api_v2_machine_list+200+application-json+previous\}
 
@@ -267,11 +116,7 @@ _Example:_
 http://api.example.org/accounts/?offset=200&limit=100
 ```
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":[{"label":"MachineSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["url"],"name":"MachineSummary","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"MachineSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["url"],"name":"MachineSummary","defaultValue":null}}]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### results \{#operation-api_v2_machine_list+200+application-json+results\}
 
@@ -279,33 +124,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### MachineSummary \{#operation-api_v2_machine_list+200+application-json+MachineSummary\}
+#### MachineSummary \{#operation-api_v2_machine_list+200+application-json+results\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_machine_list+200+application-json+MachineSummary+properties\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url \{#operation-api_v2_machine_list+200+application-json+MachineSummary+url\}
+##### url \{#operation-api_v2_machine_list+200+application-json+results+MachineSummary+url\}
 
 </Property>
 
 </SectionContent>
 
-</SectionContent>
-
 </ExpandableSection>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -317,121 +152,37 @@ _Get machine_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Security \{#operation-api_v2_machine_retrieve+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_retrieve+security+properties\}
+### Security \{#operation-api_v2_machine_retrieve-security\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth \{#operation-api_v2_machine_retrieve+security+basicAuth\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Password\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username \{#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Username\}
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth \{#operation-api_v2_machine_retrieve+security+cookieAuth\}
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
+<SectionTitle slot="title" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Parameters \{#operation-api_v2_machine_retrieve+parameters\}
+### Parameters \{#operation-api_v2_machine_retrieve-parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### id <Pill variant="warning">required</Pill> \{#operation-api_v2_machine_retrieve+parameters+id\}
+<SectionContent slot="content" variant="top-level">
+
+##### id <Pill variant="warning">required</Pill> \{#operation-api_v2_machine_retrieve-parameters\}
 
 This parameter can be a string or an integer.
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_retrieve+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_machine_retrieve+parameters+Security\}
-
-</Property>
-
-This parameter can be a string or an integer.
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -439,7 +190,7 @@ This parameter can be a string or an integer.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="top-level">
 
 ### Response \{#operation-api_v2_machine_retrieve+responses\}
 
@@ -451,29 +202,15 @@ This parameter can be a string or an integer.
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_retrieve+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_retrieve+200+application-json">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_machine_retrieve+200+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### id \{#operation-api_v2_machine_retrieve+200+application-json+id\}
 
 </Property>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":[{"label":"ItemSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"ItemSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### item \{#operation-api_v2_machine_retrieve+200+application-json+item\}
 
@@ -481,45 +218,31 @@ This parameter can be a string or an integer.
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ItemSummary \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary\}
+#### ItemSummary \{#operation-api_v2_machine_retrieve+200+application-json+item\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+properties\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+name\}
+##### name \{#operation-api_v2_machine_retrieve+200+application-json+item+ItemSummary+name\}
 
 </Property>
 
-</SectionContent>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url \{#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+url\}
+##### url \{#operation-api_v2_machine_retrieve+200+application-json+item+ItemSummary+url\}
 
 </Property>
-
-</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":[{"label":"MoveSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"MoveSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### move \{#operation-api_v2_machine_retrieve+200+application-json+move\}
 
@@ -527,45 +250,31 @@ This parameter can be a string or an integer.
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### MoveSummary \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary\}
+#### MoveSummary \{#operation-api_v2_machine_retrieve+200+application-json+move\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+properties\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+name\}
+##### name \{#operation-api_v2_machine_retrieve+200+application-json+move+MoveSummary+name\}
 
 </Property>
 
-</SectionContent>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url \{#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+url\}
+##### url \{#operation-api_v2_machine_retrieve+200+application-json+move+MoveSummary+url\}
 
 </Property>
-
-</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":[{"label":"VersionGroupSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"VersionGroupSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### version_group \{#operation-api_v2_machine_retrieve+200+application-json+version_group\}
 
@@ -573,43 +282,29 @@ This parameter can be a string or an integer.
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### VersionGroupSummary \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary\}
+#### VersionGroupSummary \{#operation-api_v2_machine_retrieve+200+application-json+version_group\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+properties\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+name\}
+##### name \{#operation-api_v2_machine_retrieve+200+application-json+version_group+VersionGroupSummary+name\}
 
 </Property>
 
-</SectionContent>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url \{#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+url\}
+##### url \{#operation-api_v2_machine_retrieve+200+application-json+version_group+VersionGroupSummary+url\}
 
 </Property>
-
-</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
