--- a/examples/docusaurus/petstore/docs/api/tag/utility.mdx
+++ b/examples/docusaurus/petstore/docs/api/tag/utility.mdx
@@ -4,7 +4,7 @@ sidebar_label: Utility
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Utility Operations \{#utility\}
@@ -15,183 +15,50 @@ _List languages_
 
 Languages for translations of API resource information.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Security \{#operation-api_v2_language_list+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_list+security+properties\}
+### Security \{#operation-api_v2_language_list-security\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_language_list+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth \{#operation-api_v2_language_list+security+basicAuth\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth \{#operation-api_v2_language_list+security+SchemeBasicAuth\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_list+security+SchemeBasicAuth+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password \{#operation-api_v2_language_list+security+SchemeBasicAuth+Password\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username \{#operation-api_v2_language_list+security+SchemeBasicAuth+Username\}
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth \{#operation-api_v2_language_list+security+cookieAuth\}
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
+<SectionTitle slot="title" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Parameters \{#operation-api_v2_language_list+parameters\}
+### Parameters \{#operation-api_v2_language_list-parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### limit \{#operation-api_v2_language_list+parameters+limit\}
+<SectionContent slot="content" variant="top-level">
+
+##### limit \{#operation-api_v2_language_list-parameters\}
 
 Number of results to return per page.
 
-<Section contentBorderVariant="all">
+<SectionContent slot="content" variant="top-level">
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_list+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_language_list+parameters+Security\}
-
-</Property>
-
-Number of results to return per page.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-##### offset \{#operation-api_v2_language_list+parameters+offset\}
+##### offset \{#operation-api_v2_language_list-parameters\}
 
 The initial index from which to return the results.
 
-<Section contentBorderVariant="all">
+<SectionContent slot="content" variant="top-level">
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_list+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_language_list+parameters+Security\}
-
-</Property>
-
-The initial index from which to return the results.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-##### q \{#operation-api_v2_language_list+parameters+q\}
+##### q \{#operation-api_v2_language_list-parameters\}
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_list+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_language_list+parameters+Security\}
-
-</Property>
-
-> Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
-Case-insensitive query applied on the `name` property. 
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -199,7 +66,7 @@ Case-insensitive query applied on the `name` property.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="top-level">
 
 ### Response \{#operation-api_v2_language_list+responses\}
 
@@ -211,19 +78,9 @@ Case-insensitive query applied on the `name` property.
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_list+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+200+application-json">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_list+200+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### count \{#operation-api_v2_language_list+200+application-json+count\}
 
@@ -235,11 +92,7 @@ _Example:_
 123
 ```
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### next \{#operation-api_v2_language_list+200+application-json+next\}
 
@@ -251,11 +104,7 @@ _Example:_
 http://api.example.org/accounts/?offset=400&limit=100
 ```
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### previous \{#operation-api_v2_language_list+200+application-json+previous\}
 
@@ -267,11 +116,7 @@ _Example:_
 http://api.example.org/accounts/?offset=200&limit=100
 ```
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### results \{#operation-api_v2_language_list+200+application-json+results\}
 
@@ -279,43 +124,29 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### LanguageSummary \{#operation-api_v2_language_list+200+application-json+LanguageSummary\}
+#### LanguageSummary \{#operation-api_v2_language_list+200+application-json+results\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_language_list+200+application-json+LanguageSummary+properties\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_language_list+200+application-json+LanguageSummary+name\}
+##### name \{#operation-api_v2_language_list+200+application-json+results+LanguageSummary+name\}
 
 </Property>
 
-</SectionContent>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url \{#operation-api_v2_language_list+200+application-json+LanguageSummary+url\}
+##### url \{#operation-api_v2_language_list+200+application-json+results+LanguageSummary+url\}
 
 </Property>
-
-</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -327,121 +158,37 @@ _Get language_
 
 Languages for translations of API resource information.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Security \{#operation-api_v2_language_retrieve+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_retrieve+security+properties\}
+### Security \{#operation-api_v2_language_retrieve-security\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth \{#operation-api_v2_language_retrieve+security+basicAuth\}
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+properties\}
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Password\}
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username \{#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Username\}
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth \{#operation-api_v2_language_retrieve+security+cookieAuth\}
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
+<SectionTitle slot="title" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Parameters \{#operation-api_v2_language_retrieve+parameters\}
+### Parameters \{#operation-api_v2_language_retrieve-parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### id <Pill variant="warning">required</Pill> \{#operation-api_v2_language_retrieve+parameters+id\}
+<SectionContent slot="content" variant="top-level">
+
+##### id <Pill variant="warning">required</Pill> \{#operation-api_v2_language_retrieve-parameters\}
 
 This parameter can be a string or an integer.
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_retrieve+parameters+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security \{#operation-api_v2_language_retrieve+parameters+Security\}
-
-</Property>
-
-This parameter can be a string or an integer.
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -449,7 +196,7 @@ This parameter can be a string or an integer.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="top-level">
 
 ### Response \{#operation-api_v2_language_retrieve+responses\}
 
@@ -461,59 +208,33 @@ This parameter can be a string or an integer.
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_retrieve+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_retrieve+200+application-json">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-api_v2_language_retrieve+200+application-json+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### id \{#operation-api_v2_language_retrieve+200+application-json+id\}
 
 </Property>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### iso3166 \{#operation-api_v2_language_retrieve+200+application-json+iso3166\}
 
 </Property>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### iso639 \{#operation-api_v2_language_retrieve+200+application-json+iso639\}
 
 </Property>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### name \{#operation-api_v2_language_retrieve+200+application-json+name\}
 
 </Property>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":[{"label":"LanguageName","schema":{"type":"object","description":null,"examples":[],"properties":{"language":{"type":"chunk","chunkId":"$18"},"name":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","language"],"name":"LanguageName","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"LanguageName","schema":{"type":"object","description":null,"examples":[],"properties":{"language":{"type":"chunk","chunkId":"$18"},"name":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","language"],"name":"LanguageName","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 ##### names \{#operation-api_v2_language_retrieve+200+application-json+names\}
 
@@ -521,89 +242,61 @@ This parameter can be a string or an integer.
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### LanguageName \{#operation-api_v2_language_retrieve+200+application-json+LanguageName\}
+#### LanguageName \{#operation-api_v2_language_retrieve+200+application-json+names\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+properties\}
+<Property typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### language \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+language\}
+##### language \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### LanguageSummary \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary\}
+#### LanguageSummary \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
-#### Properties \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+properties\}
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+name\}
+##### name \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language+LanguageSummary+name\}
 
 </Property>
 
-</SectionContent>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+url\}
+##### url \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language+LanguageSummary+url\}
 
 </Property>
-
-</SectionContent>
 
 </SectionContent>
 
 </ExpandableSection>
 
-</SectionContent>
+<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_language_retrieve+200+application-json+LanguageName+name\}
+##### name \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+name\}
 
 </Property>
 
 </SectionContent>
 
-</SectionContent>
-
 </ExpandableSection>
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
 ##### official \{#operation-api_v2_language_retrieve+200+application-json+official\}
 
 </Property>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
