--- a/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
@@ -15,15 +15,15 @@ _Embeddings_
 
 Embeddings
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Request Body \{#operation-embeddings_v1_embeddings_post+request\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -63,45 +63,45 @@ mistral-embed
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
 ### Responses \{#operation-embeddings_v1_embeddings_post+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+200+application-json">
+<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-embeddings_v1_embeddings_post+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+responses+200+application-json">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+200+application-json+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+200+application-json+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### data \{#operation-embeddings_v1_embeddings_post+200+application-json+data\}
+##### data \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### EmbeddingResponseData \{#operation-embeddings_v1_embeddings_post+200+application-json+data\}
+#### EmbeddingResponseData \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### embedding \{#operation-embeddings_v1_embeddings_post+200+application-json+data+EmbeddingResponseData+embedding\}
+##### embedding \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+embedding\}
 
 </Property>
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### index \{#operation-embeddings_v1_embeddings_post+200+application-json+data+EmbeddingResponseData+index\}
+##### index \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+index\}
 
 </Property>
 
@@ -113,7 +113,7 @@ _Example:_
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### object \{#operation-embeddings_v1_embeddings_post+200+application-json+data+EmbeddingResponseData+object\}
+##### object \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+object\}
 
 </Property>
 
@@ -129,7 +129,7 @@ embedding
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-embeddings_v1_embeddings_post+200+application-json+id\}
+##### id \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+id\}
 
 </Property>
 
@@ -141,7 +141,7 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### model \{#operation-embeddings_v1_embeddings_post+200+application-json+model\}
+##### model \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+model\}
 
 </Property>
 
@@ -153,7 +153,7 @@ mistral-small-latest
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-embeddings_v1_embeddings_post+200+application-json+object\}
+##### object \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+object\}
 
 </Property>
 
@@ -163,25 +163,25 @@ _Example:_
 chat.completion
 ```
 
-<Property typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+200+application-json+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### usage \{#operation-embeddings_v1_embeddings_post+200+application-json+usage\}
+##### usage \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### UsageInfo \{#operation-embeddings_v1_embeddings_post+200+application-json+usage\}
+#### UsageInfo \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### completion_tokens \{#operation-embeddings_v1_embeddings_post+200+application-json+usage+UsageInfo+completion_tokens\}
+##### completion_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+completion_tokens\}
 
 </Property>
 
@@ -193,7 +193,7 @@ _Example:_
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+200+application-json+usage+UsageInfo+prompt_tokens\}
+##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+prompt_tokens\}
 
 </Property>
 
@@ -205,7 +205,7 @@ _Example:_
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### total_tokens \{#operation-embeddings_v1_embeddings_post+200+application-json+usage+UsageInfo+total_tokens\}
+##### total_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+total_tokens\}
 
 </Property>
 
@@ -221,33 +221,33 @@ _Example:_
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+422+application-json">
+<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+responses+200+422+application-json">
 
 422
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-embeddings_v1_embeddings_post+422+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+responses+200+422+application-json">
 
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### HttpMeta \{#operation-embeddings_v1_embeddings_post+422+application-json+HttpMeta\}
+##### HttpMeta \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### Security \{#operation-embeddings_v1_embeddings_post+422+application-json+HttpMeta\}
+#### Security \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### ApiKey \{#operation-embeddings_v1_embeddings_post+422+application-json+HttpMeta+Security+ApiKey\}
+##### ApiKey \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+Security+ApiKey\}
 
 </Property>
 
@@ -255,37 +255,37 @@ _Example:_
 
 </ExpandableSection>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### detail \{#operation-embeddings_v1_embeddings_post+422+application-json+detail\}
+##### detail \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### ValidationError \{#operation-embeddings_v1_embeddings_post+422+application-json+detail\}
+#### ValidationError \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### loc \{#operation-embeddings_v1_embeddings_post+422+application-json+detail+ValidationError+loc\}
+##### loc \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+loc\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### msg \{#operation-embeddings_v1_embeddings_post+422+application-json+detail+ValidationError+msg\}
+##### msg \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+msg\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### type \{#operation-embeddings_v1_embeddings_post+422+application-json+detail+ValidationError+type\}
+##### type \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+type\}
 
 </Property>
 
