--- a/examples/docusaurus/mistral/docs/api/tag/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/files.mdx
@@ -17,39 +17,39 @@ Returns a list of files that belong to the user's organization.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-files_api_routes_list_files+responses\}
+### Responses \{#operation-files_api_routes_list_files+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-files_api_routes_list_files+200+application-json">
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-files_api_routes_list_files+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+responses+200+application-json">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+200+application-json+FileSchema\">FileSchema</a>","children":[{"label":"FileSchema","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+200+application-json+FileSchema\">FileSchema</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+FileSchema\">FileSchema</a>","children":[{"label":"FileSchema","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+FileSchema\">FileSchema</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### data \{#operation-files_api_routes_list_files+200+application-json+data\}
+##### data \{#operation-files_api_routes_list_files+responses+200+application-json+data\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### FileSchema \{#operation-files_api_routes_list_files+200+application-json+data\}
+#### FileSchema \{#operation-files_api_routes_list_files+responses+200+application-json+data\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### created_at \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+created_at\}
+##### created_at \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+created_at\}
 
 </Property>
 
@@ -63,7 +63,7 @@ _Example:_
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### filename \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+filename\}
+##### filename \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+filename\}
 
 </Property>
 
@@ -77,7 +77,7 @@ files_upload.jsonl
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+id\}
+##### id \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+id\}
 
 </Property>
 
@@ -91,13 +91,13 @@ _Example:_
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### num_lines \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+num_lines\}
+##### num_lines \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+num_lines\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+object\}
+##### object \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+object\}
 
 </Property>
 
@@ -111,19 +111,19 @@ file
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### purpose \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+purpose\}
+##### purpose \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+purpose\}
 
 </Property>
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### sample_type \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+sample_type\}
+##### sample_type \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+sample_type\}
 
 </Property>
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### size_bytes \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+size_bytes\}
+##### size_bytes \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+size_bytes\}
 
 </Property>
 
@@ -137,7 +137,7 @@ _Example:_
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### source \{#operation-files_api_routes_list_files+200+application-json+data+FileSchema+source\}
+##### source \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+source\}
 
 </Property>
 
@@ -147,13 +147,13 @@ _Example:_
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-files_api_routes_list_files+200+application-json+object\}
+##### object \{#operation-files_api_routes_list_files+responses+200+application-json+object\}
 
 </Property>
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### total \{#operation-files_api_routes_list_files+200+application-json+total\}
+##### total \{#operation-files_api_routes_list_files+responses+200+application-json+total\}
 
 </Property>
 
@@ -171,31 +171,31 @@ The size of individual files can be a maximum of 512 MB. The Fine-tuning API onl
 
 Please contact us if you need to increase these storage limits.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Request Body \{#operation-files_api_routes_upload_file+request\}
+### Request Body \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"File","linkedLabel":"<a href=\"#operation-files_api_routes_upload_file+request+File\">File</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<Property typeInfo={{"label":"File","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+File\">File</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### file \{#operation-files_api_routes_upload_file+request+file\}
+##### file \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file\}
 
 </Property>
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-#### File \{#operation-files_api_routes_upload_file+request+file\}
+#### File \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="default">
 
 The File object (not file name) to be uploaded.
  To upload a file and specify a custom file name you should format your request as such:
@@ -209,13 +209,13 @@ The File object (not file name) to be uploaded.
 
 <Property typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### content \{#operation-files_api_routes_upload_file+request+file+File+content\}
+##### content \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+File+content\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### fileName \{#operation-files_api_routes_upload_file+request+file+File+fileName\}
+##### fileName \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+File+fileName\}
 
 </Property>
 
@@ -225,7 +225,7 @@ The File object (not file name) to be uploaded.
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### purpose \{#operation-files_api_routes_upload_file+request+purpose\}
+##### purpose \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+purpose\}
 
 </Property>
 
@@ -235,23 +235,23 @@ The File object (not file name) to be uploaded.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-files_api_routes_upload_file+responses\}
+### Responses \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-files_api_routes_upload_file+200+application-json">
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-files_api_routes_upload_file+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json">
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### created_at \{#operation-files_api_routes_upload_file+200+application-json+created_at\}
+##### created_at \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+created_at\}
 
 </Property>
 
@@ -265,7 +265,7 @@ _Example:_
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### filename \{#operation-files_api_routes_upload_file+200+application-json+filename\}
+##### filename \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+filename\}
 
 </Property>
 
@@ -279,7 +279,7 @@ files_upload.jsonl
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-files_api_routes_upload_file+200+application-json+id\}
+##### id \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+id\}
 
 </Property>
 
@@ -293,13 +293,13 @@ _Example:_
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### num_lines \{#operation-files_api_routes_upload_file+200+application-json+num_lines\}
+##### num_lines \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+num_lines\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-files_api_routes_upload_file+200+application-json+object\}
+##### object \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+object\}
 
 </Property>
 
@@ -313,19 +313,19 @@ file
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### purpose \{#operation-files_api_routes_upload_file+200+application-json+purpose\}
+##### purpose \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+purpose\}
 
 </Property>
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### sample_type \{#operation-files_api_routes_upload_file+200+application-json+sample_type\}
+##### sample_type \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+sample_type\}
 
 </Property>
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### size_bytes \{#operation-files_api_routes_upload_file+200+application-json+size_bytes\}
+##### size_bytes \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+size_bytes\}
 
 </Property>
 
@@ -339,7 +339,7 @@ _Example:_
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### source \{#operation-files_api_routes_upload_file+200+application-json+source\}
+##### source \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+source\}
 
 </Property>
 
@@ -353,17 +353,17 @@ _Retrieve File_
 
 Returns information about a specific file.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Parameters \{#operation-files_api_routes_retrieve_file+parameters\}
+### Parameters \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_retrieve_file+parameters+file_id\}
+##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+parameters\}
 
 </SectionContent>
 
@@ -371,23 +371,23 @@ Returns information about a specific file.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-files_api_routes_retrieve_file+responses\}
+### Responses \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-files_api_routes_retrieve_file+200+application-json">
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-files_api_routes_retrieve_file+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json">
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### created_at \{#operation-files_api_routes_retrieve_file+200+application-json+created_at\}
+##### created_at \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+created_at\}
 
 </Property>
 
@@ -401,13 +401,13 @@ _Example:_
 
 <Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### deleted \{#operation-files_api_routes_retrieve_file+200+application-json+deleted\}
+##### deleted \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+deleted\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### filename \{#operation-files_api_routes_retrieve_file+200+application-json+filename\}
+##### filename \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+filename\}
 
 </Property>
 
@@ -421,7 +421,7 @@ files_upload.jsonl
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-files_api_routes_retrieve_file+200+application-json+id\}
+##### id \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+id\}
 
 </Property>
 
@@ -435,13 +435,13 @@ _Example:_
 
 <Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### num_lines \{#operation-files_api_routes_retrieve_file+200+application-json+num_lines\}
+##### num_lines \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+num_lines\}
 
 </Property>
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-files_api_routes_retrieve_file+200+application-json+object\}
+##### object \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+object\}
 
 </Property>
 
@@ -455,19 +455,19 @@ file
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### purpose \{#operation-files_api_routes_retrieve_file+200+application-json+purpose\}
+##### purpose \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+purpose\}
 
 </Property>
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### sample_type \{#operation-files_api_routes_retrieve_file+200+application-json+sample_type\}
+##### sample_type \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+sample_type\}
 
 </Property>
 
 <Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### size_bytes \{#operation-files_api_routes_retrieve_file+200+application-json+size_bytes\}
+##### size_bytes \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+size_bytes\}
 
 </Property>
 
@@ -481,7 +481,7 @@ _Example:_
 
 <Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### source \{#operation-files_api_routes_retrieve_file+200+application-json+source\}
+##### source \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+source\}
 
 </Property>
 
@@ -495,17 +495,17 @@ _Delete File_
 
 Delete a file.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Parameters \{#operation-files_api_routes_delete_file+parameters\}
+### Parameters \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_delete_file+parameters+file_id\}
+##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+parameters\}
 
 </SectionContent>
 
@@ -513,23 +513,23 @@ Delete a file.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-files_api_routes_delete_file+responses\}
+### Responses \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-files_api_routes_delete_file+200+application-json">
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-files_api_routes_delete_file+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json">
 
 <Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### deleted \{#operation-files_api_routes_delete_file+200+application-json+deleted\}
+##### deleted \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+deleted\}
 
 </Property>
 
@@ -543,7 +543,7 @@ false
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### id \{#operation-files_api_routes_delete_file+200+application-json+id\}
+##### id \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+id\}
 
 </Property>
 
@@ -557,7 +557,7 @@ _Example:_
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### object \{#operation-files_api_routes_delete_file+200+application-json+object\}
+##### object \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+object\}
 
 </Property>
 
@@ -579,17 +579,17 @@ _Download File_
 
 Download a file
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Parameters \{#operation-files_api_routes_download_file+parameters\}
+### Parameters \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_download_file+parameters+file_id\}
+##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+parameters\}
 
 </SectionContent>
 
@@ -597,19 +597,25 @@ Download a file
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-files_api_routes_download_file+responses\}
+### Responses \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-files_api_routes_download_file+200+application-octet-stream">
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+responses+200+application-octet-stream">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-files_api_routes_download_file+200+application-octet-stream">
+<SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+responses+200+application-octet-stream">
+
+<Property typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+
+
+</Property>
 
 OK
 
@@ -621,23 +627,19 @@ OK
 
 Get Signed Url
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Parameters \{#operation-files_api_routes_get_signed_url+parameters\}
+### Parameters \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters\}
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_get_signed_url+parameters+file_id\}
+##### file\_id <Pill variant="warning">required</Pill> \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters\}
 
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-##### expiry \{#operation-files_api_routes_get_signed_url+parameters+expiry\}
+##### expiry \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters\}
 
 Number of hours before the url becomes invalid. Defaults to 24h
 
@@ -647,23 +649,23 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-files_api_routes_get_signed_url+responses\}
+### Responses \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-files_api_routes_get_signed_url+200+application-json">
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-files_api_routes_get_signed_url+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+responses+200+application-json">
 
 <Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### url \{#operation-files_api_routes_get_signed_url+200+application-json+url\}
+##### url \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+responses+200+application-json+url\}
 
 </Property>
 
